--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="bismillah">بسم الله الرحمن الرحيم</h1>
 
         <!-- Logo -->
-        <img src="pol.png" alt="School Logo" class="logo">
+        <img src="logo.jpeg" alt="School Logo" class="logo">
 
         <!-- School Name -->
         <h2 class="school-name">The Genius School System</h2>
